refactor package add base agent

--- a/PygameModellingCourseTrack22.ipynb
+++ b/PygameModellingCourseTrack22.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "Welcome to the Pygame Modelling Workshop. You can find the track and tasks in this notebook. We assume that you have `python3.7+` with `pip` installed and you have installed the provided package `pygmodw22` with all it's dependencies in a virtual environment from which you are running this notebook. In case you have not yet done the preparatory steps, please follow the instructions [in the README file](https://github.com/mezdahun/PygameModelling22#1-prerequisites)\n",
+    "Welcome to the Pygame Modelling Workshop. You can find the track and tasks in this notebook. We assume that you have `python3.7+` with `pip` installed and you have installed the provided package `pygmodw23` with all it's dependencies in a virtual environment from which you are running this notebook. In case you have not yet done the preparatory steps, please follow the instructions [in the README file](https://github.com/mezdahun/PygameModelling22#1-prerequisites)\n",
     "\n",
     "## Goal of the Workshop\n",
     "During this workshop you will get a hands-on introduction and demonstration on modelling a typical multi-agent system using an open-source game engine (pygame). \n",
@@ -88,7 +88,7 @@
     "\n",
     "## Structure of the provided code base\n",
     "\n",
-    "To make our experimentation faster we have provided a code base including an implementation of the described Three-zone-model as a custom made python package called `pygmodw22` (**Pyg**ame **Mod**elling **W**orkshop 20**22**). The package includes a `setup.py` file that allows it to be installed via `pip` including all dependencies and version restrictions for the package. Inside the folder package `pygmodw22` you have 3 files.\n",
+    "To make our experimentation faster we have provided a code base including an implementation of the described Three-zone-model as a custom made python package called `pygmodw23` (**Pyg**ame **Mod**elling **W**orkshop 20**22**). The package includes a `setup.py` file that allows it to be installed via `pip` including all dependencies and version restrictions for the package. Inside the folder package `pygmodw23` you have 3 files.\n",
     "\n",
     "1. **agent.py**: Includes the implementation of moving agents of the model as a single `Agent` class and the rules/methods of how these agents' behavior is updated in each timestep (`update` method). Other than functionality, the `Agent` class also describes the appearance of the agents (color, radius, etc. `draw` method). Defining and drawing the agents is surpisingly easy compared to other animation methods (e.g. matplotlib animation library). This is one of the great advantages of `pygame`. Each agent class instance will include their own parameters (radius, zone parameters, etc.) hence `pygame` also makes heterogeneous system implementations easy compared to vectorized or non-object-oriented solutions.\n",
     "\n",
@@ -115,7 +115,7 @@
    "outputs": [],
    "source": [
     "# first we import the Simulation class from the code base\n",
-    "from pygmodw22.sims import Simulation"
+    "from pygmodw23.sims import Simulation"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "# first we import the Simulation class from the code base\n",
-    "from pygmodw22.sims import Simulation\n",
+    "from pygmodw23.sims import Simulation\n",
     "# now we can create a Simulation class instance as follows\n",
     "simulation = Simulation(N=10,  # Number of agents in the environment\n",
     "                        T=250,  # Simulation timesteps\n",
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "# first we import the Simulation class from the code base\n",
-    "from pygmodw22.sims import Simulation\n",
+    "from pygmodw23.sims import Simulation\n",
     "# now we can create a Simulation class instance as follows\n",
     "simulation = Simulation(N=10,  # Number of agents in the environment\n",
     "                        T=250,  # Simulation timesteps\n",
@@ -252,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pygmodw22.sims import Simulation\n",
+    "from pygmodw23.sims import Simulation\n",
     "\n",
     "# We create a Simulation class instance with it's default agents as before\n",
     "simulation = Simulation(N=20,  # Number of agents in the environment\n",
@@ -347,7 +347,7 @@
     "## Task 5.: Predator-prey model\n",
     "It can happen that the system consists of multiple types of agents and they interact with each other in a non-symmetric way, i.e. they are different for the same (intra-species) and for different type of agents (innter-species). A simple example is a predator-prey system consisting of a group of prey animals and a single predator. In this task you will implement this model by adjusting the code base.\n",
     "\n",
-    "The description of the current agents you can find in the file `pygmodw22/agents.py` where you have an `Agent` class. Currently when we create the `N` agents for the simulation, all of them are of the same type. In the previous examples you have modified the parameters (class-attributes) of the agents so that they became heterogeneous with different attraction/repulsion strengths etc. On the other hand they still interacted with each other according to the same local rules (just with different parameters).\n",
+    "The description of the current agents you can find in the file `pygmodw23/agents.py` where you have an `Agent` class. Currently when we create the `N` agents for the simulation, all of them are of the same type. In the previous examples you have modified the parameters (class-attributes) of the agents so that they became heterogeneous with different attraction/repulsion strengths etc. On the other hand they still interacted with each other according to the same local rules (just with different parameters).\n",
     "\n",
     "The task is to introduce a new `type` class-attribute in the Agent class (in the `__init__` method where all other class-attributes are initialized) that will distinguish between predators and preys. (e.g. 0 and 1 or strings like \"predator\" and \"prey\")\n",
     "\n",
@@ -386,7 +386,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -400,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
